tests/files/lexer_tests/should_fail/024.cmdr
// Illegal character in string (ascii 24)
var = '';